--- a/gembed/plot_aifb_graph_embeddings.ipynb
+++ b/gembed/plot_aifb_graph_embeddings.ipynb
@@ -246,9 +246,9 @@
    ],
    "source": [
     "# The AIFB dataset has 176 people and they are associated with one of four affiliations in the organization.\n",
-    "# The completeSet.tsv file gives the URIs of the people and their affiliation\n",
+    "# The person_affiliations.csv file gives the URIs of the people and their affiliation\n",
     "# (number, person, affiliation)\n",
-    "people_organization_dict = get_class_dictionary('data/completeDataset.csv', True)\n",
+    "people_organization_dict = get_class_dictionary('data/person_affiliations.csv', True)\n",
     "people_embeddings, people_labels = get_category_embeddings(people_organization_dict, embeddings_dict)\n",
     "people_y = tsne2D(people_embeddings)\n",
     "#people_y = umap2D(people_embeddings)"
